<resources>
    <string name="app_name">Mappy Stars</string>
    <string name="api_key_places">AIzaSyCp9X6e2hQeTg6tIOEMdNmsLkGwF62vHBI</string>
    <string name="title_templates">Шаблоны</string>
    <string name="title_projects">Мои проекты</string>
    <string name="title_settings">Настройки</string>
    <string name="title_template">Шаблон</string>
    <string name="full_screen">На весь экран</string>
    <string name="btn_back">Назад</string>
    <string name="label_date">Дата</string>
    <string name="label_time">Время</string>
    <string name="label_location">Место, где произошло событие</string>
    <string name="label_or">или</string>
    <string name="label_latitude">Широта</string>
    <string name="label_latitude_dialog">Широта места события</string>
    <string name="label_longitude">Долгота</string>
    <string name="label_longitude_dialog">Долгота места события</string>
    <string name="label_range_90">Диапазон значений от -90 до +90</string>
    <string name="label_range_180">Диапазон значений от -180 до +180</string>
    <string name="error_latitude">Неверная широта!</string>
    <string name="error_longitude">Неверная долгота!</string>
    <string name="error_empty">Пустое значение недопустимо!</string>
    <string name="label_result">Итоговый текст</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="you_sure">Вы уверены, что хотите удалить проект?</string>
    <string name="save_to_project">Сохранить в Мои проекты</string>
    <string name="title_project">Название проекта</string>
    <string name="other">Другое…</string>
    <string name="label_size">Размер холста</string>
    <string name="label_background">Цвет фона</string>
    <string name="label_color_border">Цвет рамки</string>
    <string name="label_enable_border">Добавить рамку</string>
    <string name="label_shape">Форма рамки</string>
    <string name="label_shape_separator">Форма разделителя</string>
    <string name="label_size_map">Размер карты</string>
    <string name="label_position_map">Позиция карты</string>
    <string name="label_height_map">Высота карты</string>
    <string name="label_indent_map">Отступ карты</string>
    <string name="label_background_map">Цвет фона карты</string>
    <string name="label_enable_border_map">Добавить рамку</string>
    <string name="label_color_border_map">Цвет рамки</string>
    <string name="label_indent_border">Отступ для рамки</string>
    <string name="label_width_border">Размер рамки</string>
    <string name="label_enable_graticule">Добавить сеть координат</string>
    <string name="label_color_graticule">Цвет сети</string>
    <string name="label_enable_dashed">Прерывистые линии</string>
    <string name="label_opacity_graticule">Яркость сети</string>
    <string name="label_width_graticule">Толщина сети</string>
    <string name="label_enable_milky_way">Добавить млечный путь</string>
    <string name="label_enable_constellations">Добавить линии созвездий</string>
    <string name="label_color_constellations">Цвет линий созвездий</string>
    <string name="label_opacity_constellations">Яркость линий созвездий</string>
    <string name="label_width_constellations">Толщина линий созвездий</string>
    <string name="label_opacity_stars">Яркость звезд</string>
    <string name="label_color_stars">Цвет звезд</string>
    <string name="label_size_stars">Размер звезд</string>
    <string name="label_shape_stars">Форма звезд</string>
    <string name="label_enable_names">Названия объектов</string>
    <string name="label_color_names">Цвет названий</string>
    <string name="label_size_names">Размер названий</string>
    <string name="label_lang">Язык названий звезд</string>
    <string name="label_format_extension">Формат файла</string>
    <string name="label_desc">Текст события</string>
    <string name="label_font_family_desc">Шрифт текста</string>
    <string name="label_color_font_desc">Цвет текста</string>
    <string name="label_size_font_desc">Размер текста</string>
    <string name="label_enable_separator">Добавить разделитель</string>
    <string name="label_color_separator">Цвет разделителя</string>
    <string name="label_font_family_location">Шрифт текста</string>
    <string name="label_color_font_location">Цвет текста</string>
    <string name="label_size_font_location">Размер текста</string>
    <string name="label_enable_date_in_location">Добавить дату</string>
    <string name="label_enable_time_in_location">Добавить время</string>
    <string name="label_enable_location_in_location">Добавить место</string>
    <string name="label_enable_coordinates_in_location">Добавить координаты</string>
    <string name="label_result_text">Изменить текст</string>
    <string name="label_width_separator">Длина разделителя</string>
    <string name="not_found_projects">У Вас пока нет проектов</string>
    <string name="image">Изображение</string>
    <string name="invalid_value">Неверное значение!</string>
    <string name="input_text">Введите текст!</string>
    <string name="label_color_text">Цвет текста</string>
    <string name="cancel">Отмена</string>
    <string name="review_label">Оставить отзыв</string>
    <string name="label_share">Поделиться с друзьями</string>
    <string name="label_about_error">Сообщить о проблеме</string>
    <string name="label_politics">Политика конфиденциальности</string>
    <string name="label_telegram">Наш телеграм</string>
    <string name="hint_contact">Ваш контакт (любой)</string>
    <string name="hint_problem">Описание проблемы</string>
    <string name="label_text_desc">Текст события</string>
    <string name="btn_create_template">Создать</string>
    <string name="ad">Ad</string>
    <string name="headline">Headline</string>
    <string name="advertiser">Advertiser</string>
    <string name="price">Price</string>
    <string name="body">Body</string>
    <string name="store">Store</string>

</resources>