<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_templates">

    <fragment
        android:id="@+id/navigation_templates"
        android:name="com.nikolaydemidovez.starmap.pages.templates.TemplatesFragment"
        android:label="@string/title_templates"
        tools:layout="@layout/fragment_templates" >
        <action
            android:id="@+id/action_navigation_templates_to_templateFragment"
            app:destination="@id/templateFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.nikolaydemidovez.starmap.pages.projects.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_projects" >
        <action
            android:id="@+id/action_navigation_projects_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_projects_to_templateFragment"
            app:destination="@id/templateFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.nikolaydemidovez.starmap.pages.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/templateFragment"
        android:name="com.nikolaydemidovez.starmap.pages.template.TemplateFragment"
        android:label="@string/title_template"
        tools:layout="@layout/fragment_template" >
        <action
            android:id="@+id/action_templateFragment_to_navigation_projects"
            app:destination="@id/navigation_projects"
            app:popUpTo="@id/navigation_templates" />
    </fragment>
</navigation>