<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="24dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp">

<com.google.android.gms.ads.nativead.NativeAdView
    android:id="@+id/ad_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/adAttribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="20dp"
            android:height="17dp"
            android:background="#FFCC66"
            android:fontFamily="@font/nunito"
            android:textColor="@color/white"
            android:text="@string/ad"
            android:textAlignment="center"
            android:textSize="12sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/adIcon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:adjustViewBounds="true"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/ad" />

            <TextView
                android:id="@+id/adHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:textColor="@color/dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/headline"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/adIcon"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/adAdvertiser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:textColor="@color/dark_shadow"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/advertiser"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/adHeadline"
                app:layout_constraintStart_toEndOf="@+id/adIcon"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RatingBar
                android:id="@+id/adStars"
                style="?android:attr/ratingBarStyleSmall"
                android:theme="@style/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.5"
                android:layout_marginTop="6dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/adAdvertiser"
                app:layout_constraintStart_toEndOf="@+id/adIcon"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/adPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/nunito"
                android:textColor="@color/dark"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/price"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/adAdvertiser"
                app:layout_constraintStart_toEndOf="@+id/adStars"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/adBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/dark_shadow"
                android:fontFamily="@font/nunito"
                android:text="@string/body"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/adStars"
                app:layout_constraintStart_toEndOf="@+id/adIcon"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/adStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/dark_gray"
                android:fontFamily="@font/nunito"
                android:text="@string/store"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/adBody"
                app:layout_constraintStart_toEndOf="@+id/adIcon"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.gms.ads.nativead.MediaView
                android:id="@+id/adMedia"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/adStore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/adCallToAction"/>

            <Button
                android:id="@+id/adCallToAction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="16dp"
                android:letterSpacing="0.0"
                android:stateListAnimator="@null"
                android:background="@drawable/button_background_create"
                android:theme="@style/button_admob"
                app:backgroundTint="@color/dark_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</com.google.android.gms.ads.nativead.NativeAdView>
</androidx.cardview.widget.CardView>