<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.event_v1.EventV1ControllerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/label_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_date"
            app:layout_constraintBottom_toBottomOf="@+id/edit_date"
            app:layout_constraintEnd_toStartOf="@+id/edit_date"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_date" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_edittext"
            android:padding="8dp"
            android:textSize="15sp"
            android:gravity="top"
            android:inputType="textNoSuggestions"
            tools:ignore="TextFields"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="9"
            app:layout_constraintStart_toEndOf="@id/label_date"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_time"
            app:layout_constraintBottom_toBottomOf="@+id/edit_time"
            app:layout_constraintEnd_toStartOf="@+id/edit_time"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_time" />

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_edittext"
            android:padding="8dp"
            android:textSize="15sp"
            android:gravity="top"
            android:inputType="textNoSuggestions"
            tools:ignore="TextFields"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_weight="9"
            app:layout_constraintStart_toEndOf="@id/label_time"
            app:layout_constraintTop_toBottomOf="@+id/edit_date"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/label_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_location"
            app:layout_constraintBottom_toBottomOf="@+id/edit_location"
            app:layout_constraintEnd_toStartOf="@+id/edit_location"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_location" />

        <EditText
            android:id="@+id/edit_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_edittext"
            android:padding="8dp"
            android:textSize="15sp"
            android:gravity="top"
            android:inputType="textNoSuggestions"
            tools:ignore="TextFields"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_weight="9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_location"
            app:layout_constraintTop_toBottomOf="@+id/edit_time"/>

        <TextView
            android:id="@+id/label_latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_latitude"
            app:layout_constraintBottom_toBottomOf="@+id/edit_latitude"
            app:layout_constraintEnd_toStartOf="@+id/edit_latitude"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_latitude" />

        <EditText
            android:id="@+id/edit_latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_edittext"
            android:padding="8dp"
            android:textSize="15sp"
            android:gravity="top"
            android:inputType="textNoSuggestions"
            tools:ignore="TextFields"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_weight="9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_latitude"
            app:layout_constraintTop_toBottomOf="@+id/edit_location"/>

        <TextView
            android:id="@+id/label_longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_longitude"
            app:layout_constraintBottom_toBottomOf="@+id/edit_longitude"
            app:layout_constraintEnd_toStartOf="@+id/edit_longitude"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_longitude" />

        <EditText
            android:id="@+id/edit_longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_edittext"
            android:padding="8dp"
            android:textSize="15sp"
            android:gravity="top"
            android:inputType="textNoSuggestions"
            tools:ignore="TextFields"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_weight="9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_longitude"
            app:layout_constraintTop_toBottomOf="@+id/edit_latitude"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
