<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout"
    android:gravity="center_vertical"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_margin="8dp"
        style="@style/title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/message"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/text_area_about_problem"
            android:hint="@string/hint_problem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="coordinates"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/clearMessage"
            app:layout_constraintTop_toTopOf="@+id/message"
            app:layout_constraintEnd_toEndOf="@+id/message"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            android:padding="8dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="4dp"
            android:layout_width="34dp"
            android:layout_height="30dp"
            android:contentDescription="@string/image"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/contact"
            style="@style/edit_text_controller"
            android:textSize="16sp"
            android:paddingEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/hint_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="coordinates"
            tools:ignore="LabelFor,RtlSymmetry" />

        <ImageView
            android:id="@+id/clearContact"
            app:layout_constraintTop_toTopOf="@+id/contact"
            app:layout_constraintBottom_toBottomOf="@+id/contact"
            app:layout_constraintEnd_toEndOf="@+id/contact"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            android:padding="8dp"
            android:paddingEnd="12dp"
            android:layout_width="34dp"
            android:layout_height="30dp"
            android:contentDescription="@string/image"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout >